--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ header div {
     width: 200px;
     margin: auto;
     
-    background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+    background-image: linear-gradient(90deg, #8f12c9 0%, #17419c 50.52%, #e6d43b 100%);
     border-radius: 50%;
 
     display: flex;
@@ -62,7 +62,7 @@ main{
 section{
     color: white;
 
-    background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+    background-image: linear-gradient(90deg, #8f12c9 0%, #17419c 50.52%, #e6d43b 100%);
 
     padding-top: 5px;   
 
